syntax = "proto3";

option csharp_namespace = "Restaurante.Protos";

package restaurante;

import "google/protobuf/empty.proto";

// The restaurant service definition
service RestauranteService {
  // Make an order
  rpc HacerPedido (PedidoRequest) returns (PedidoResponse);
  // Get order status
  rpc ConsultarEstadoPedido (ConsultaRequest) returns (EstadoResponse);
  // For couriers: wait until a ready order is available and take it for delivery
  rpc TomarPedidoParaRepartir (google.protobuf.Empty) returns (PedidoResponse);
}

// The request message containing order details
message PedidoRequest {
  repeated PlatoPedido platos = 1;
  int32 distancia = 2;
}

// A dish in the order
message PlatoPedido {
  string nombre = 1;
  int32 cantidad = 2;
}

// The response message containing the order ID
message PedidoResponse {
  int32 id_pedido = 1;
  string mensaje = 2;
}

// The request message for checking order status
message ConsultaRequest {
  int32 id_pedido = 1;
}

// The response message containing order status
message EstadoResponse {
  string estado = 1;
  string mensaje = 2;
  int32 tiempo_estimado = 3;
}
